edit: .env for db connection

--- a/docker/php8/php.ini
+++ b/docker/php8/php.ini
@@ -19,4 +19,5 @@ date.timezone=Europe/Paris
 ;extension=/opt/ibm/iaccess/lib64/libcwbcore.so
 ;extension=/opt/ibm/dsdriver/lib32/ibm_db2.so
 php_admin_value[extension]=ibm_db2.so
+extension=pdo_mysql.so
 ;ibm_db2.instance_name=db2inst1
