--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_DATABASE: app
+      MYSQL_DATABASE: spote
       MYSQL_USER: ChangeMe
       MYSQL_PASSWORD: symfony
       MYSQL_ROOT_PASSWORD: symfony
@@ -32,8 +32,8 @@ services:
     image: phpmyadmin/phpmyadmin
     restart: always
     environment:
-      PMA_HOST: database
-      MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
+      PMA_HOST: spote
+      MYSQL_ROOT_PASSWORD: spote
     ports:
       - "8080:80"
 
