--- a/project/Spote_api/.env
+++ b/project/Spote_api/.env
@@ -1,11 +1,12 @@
 APP_ENV=dev
 APP_SECRET=0027d5955df55dcd6739cb6d31796750
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+DB_HOST=mysql
 DATABASE_NAME=spote
-DATABASE_USER=spote
-DATABASE_PASSWORD=root
-DATABASE_ROOT_PASSWORD=root
-DATABASE_URL=mysql://spote:root@127.0.0.1:3306/spote
+DATABASE_USER=ChangeMe
+DATABASE_PASSWORD=symfony
+DATABASE_ROOT_PASSWORD=symfony
+DATABASE_URL=mysql://root:symfony@spote_api-database-1/spote?serverVersion=8.1.17
 APP_TRUSTED_PROXIES=127.0.0.1
 TRUSTED_PROXIES=127.0.0.1,::1
 TRUSTED_HOSTS='^localhost|example\.com$'
