--- a/project/Spote_api/config/packages/security.yaml
+++ b/project/Spote_api/config/packages/security.yaml
@@ -21,7 +21,7 @@ security:
             security: false
         main:
             json_login:
-                check_path: auth # The name in routes.yaml is enough for mapping
+                check_path: auth
                 username_path: email
                 password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
