add:Conversation Message

--- a/project/Spote_api/.env
+++ b/project/Spote_api/.env
@@ -3,7 +3,7 @@ APP_SECRET=0027d5955df55dcd6739cb6d31796750
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 DB_HOST=mysql
 DATABASE_NAME=spote
-DATABASE_USER=ChangeMe
+DATABASE_USER=root
 DATABASE_PASSWORD=symfony
 DATABASE_ROOT_PASSWORD=symfony
 DATABASE_URL=mysql://root:symfony@spote_api-database-1/spote?serverVersion=8.1.17
