--- a/project/Spote_api/config/routes.yaml
+++ b/project/Spote_api/config/routes.yaml
@@ -7,3 +7,8 @@ controllers:
 auth:
     path: /auth
     methods: ['POST']
+
+register:
+    path: /register
+    controller: App\Controller\UserController::register
+    methods: ['POST']
