--- a/docker/php8/php.ini
+++ b/docker/php8/php.ini
@@ -2,6 +2,7 @@ display_errors = On
 error_reporting = E_ALL
 memory_limit=512M
 
+expose_php = Off
 opcache.enable=1
 opcache.revalidate_freq=10
 opcache.validate_timestamps=1
