--- a/project/Spote_api/.env
+++ b/project/Spote_api/.env
@@ -1,6 +1,7 @@
 APP_ENV=dev
 APP_SECRET=0027d5955df55dcd6739cb6d31796750
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+APP_HOST=5.183.213.160
 DB_HOST=mysql
 DATABASE_NAME=spote
 DATABASE_USER=root
