--- a/project/Spote_api/composer.json
+++ b/project/Spote_api/composer.json
@@ -32,7 +32,8 @@
         "symfony/serializer": "6.2.*",
         "symfony/twig-bundle": "6.2.*",
         "symfony/validator": "6.2.*",
-        "symfony/yaml": "6.2.*"
+        "symfony/yaml": "6.2.*",
+        "vich/uploader-bundle": "^2.1"
     },
     "config": {
         "allow-plugins": {
